--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -276,6 +276,8 @@
     <string name="vibrate_three_short">Three short vibrations</string>
     <string name="vibrate_one_short_one_long">One short, one long vibration</string>
     <string name="vibrate_one_long_one_short">One long, one short vibration</string>
+    <string name="vibrate_one_short">One short vibration</string>
+    <string name="vibrate_one_longt">One long vibration</string>
     <string name="sound_effects">Sound Effects</string>
     <string name="delivery_reports">Delivery Reports</string>
     <string name="theme_settings">Customization</string>
